--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=1024">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>Designing a Mobile-Enabling API | Day of DotNetNuke, Charlotte, June 2, 2012 | by Brian Dukes @BrianDukes</title>
+    <title>Responsive Views with Knockout | DotNetNuke World, 2012 | by Brian Dukes @BrianDukes</title>
     
-    <meta name="description" content="Use the new DotNetNuke Service Framework to enable your modules and other extensions to power mobile applications and other new and unique workflows.  While it's always been possible to have various sorts of web services alongside your module, the Service Framework provides a common pattern to enable smart authentication and a clean development model.  This presentation will demonstrate what it looks like to use the Service Framework to develop an API that exposes rich functionality to a wide variety of potential clients, including native mobile applications.">
+    <meta name="description" content="Knockout is a JavaScript library for creating incredibly responsive and interactive HTML. It uses a &quot;data-binding&quot; technique to declaratively associate HTML elements with a JavaScript object, so that changes made in one place are automatically made in the other. Change your name on the form, the name is changed in JavaScript. Perform a calculation in JavaScript, its results are automatically displayed on the page. This presentation will show some realistic examples of how to use Knockout in your everyday module development, and go over the pitfalls and gotchas that you may encounter, as well as show off some tips and tricks to use the library to its fullest.">
     <meta name="author" content="Brian Dukes">
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold" rel="stylesheet">
@@ -30,303 +30,9 @@
 <div id="impress">
     <div id="title" class="step slide" data-x="0">
         <hgroup>
-            <h1>Designing a Mobile-Enabling API</h1>
+            <h1>Responsive Views with Knockout</h1>
             <h2>Brian Dukes, Engage Software</h2>
-            <h3>Charlotte Day of DotNetNuke 2012</h3>
         </hgroup>
-        <p class="sponsors">
-            <a href="http://www.dotnetnuke.com/"><img src="img/DotNetNuke.png" alt="DotNetNuke" /></a>
-            <a href="http://www.PowerDNN.com/"><img src="img/PowerDnn.png" alt="PowerDNN" /></a>
-        </p>
-    </div>
-    <div id="services-framework" class="step" data-x="1000" data-rotate="90">
-        <q>What does it <strong>look like</strong> to use the <em>Services Framework?</em></q>
-    </div>
-    <div id="agenda" class="step second-step" data-x="1000" data-rotate="90" data-z="-1000">
-        <h3>Agenda</h3>
-        <ul>
-            <li>Implementation</li>
-            <li>Benefits</li>
-            <li>Usage</li>
-        </ul>
-        <h3>Prerequisites</h3>
-        <ul>
-            <li>Familiar with DNN development (C#)</li>
-            <li>Familiar with Ajax (via jQuery)</li>
-            <li>Basic understanding of MVC pattern</li>
-        </ul>
-    </div>
-    <div id="technology-overview" class="step" data-x="2000">
-        <h3>Technology Overview</h3>
-        <ul>
-            <li>
-                Based on <strong>ASP.NET MVC 2</strong>
-                <ul><li>Probably <strong>ASP.NET Web API</strong> in the near future</li></ul>
-            </li>
-            <li>
-                Implement <strong>controllers</strong> to process requests
-            </li>
-            <li>
-                Register <strong>routes</strong> to direct requests to controller <strong>actions</strong>
-            </li>
-            <li>
-                Very easy to provide <strong><abbr title="JavaScript Object Notation">JSON</abbr></strong> responses
-                <ul><li><strong>Web API</strong> would provide more serialization options</li></ul>
-            </li>
-        </ul>
-    </div>
-    <div id="controllers" class="step" data-x="3000">
-        <h3>Controllers</h3>
-        <ul>
-            <li>
-                Inherit from <code>DnnController</code>
-            </li>
-            <li>
-                Class name must end with <code>Controller</code>
-            </li>
-            <li>
-                All <code>public</code> methods are actions
-                <ul><li>Opt out with <code>NonActionAttribute</code></li></ul>
-            </li>
-            <li>
-                Actions typically return <code>ActionResult</code>
-            </li>
-        </ul>
-    </div>
-    <div id="controller-example" class="step code-step second-step" data-x="3000" data-z="-1000" data-rotate="90">
-        <h3>Controller Example</h3>
-        <pre class="brush: csharp">
-        namespace Example.Dnn.Services {
-            using System.Web.Mvc;
-            using DotNetNuke.Web.Services;
-
-            public class ExampleController : DnnController {
-                public ActionResult Hello() {
-                    return Json(new { 
-                        number = 1, 
-                        text = "Hi!",
-                    });
-                }
-            }
-        }
-        </pre>
-    </div>
-    <div id="routes" class="step" data-x="4000">
-        <h3>Routes</h3>
-        <ul>
-            <li>
-                Implement <code>IServiceRouteMapper</code> interface
-                <ul><li><code>void RegisterRoutes(IMapRoute)</code></li></ul>
-            </li>
-            <li>
-                Call <code>MapRoute</code> method on <code>IMapRoute</code> argument
-            </li>
-            <li>
-                Services route to <code>/DesktopModules/Module/API/[route]</code>
-            </li>
-            <li>
-                Define <strong>placeholders</strong> or <strong>defaults</strong> for the controller &amp; action
-            </li>
-            <li>
-                Can define route <strong>constraints</strong>, also
-                <ul>
-                  <li>Regular expression</li>
-                  <li>Implement <code>IRouteConstraint</code>'s <code>Match</code> method</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div id="route-example" class="step code-step second-step" data-x="4000" data-z="-1000" data-rotate="90">
-        <h3>Route Example</h3>
-        <pre class="brush: csharp">
-        /*/DesktopModules/Example/S/API/Example.ashx/Hello*/
-        namespace Example.Dnn.Services {
-            using DotNetNuke.Web.Services;
-
-            public class Mapperator : IServiceRouteMapper {
-                public void RegisterRoutes(IMapRoute mapper) {
-                    mapper.MapRoute(
-                        moduleFolderName: "Example/S", 
-                        url: "{controller}.ashx/{action}", 
-                        namespaces: new[] { 
-                            "Example.Dnn.Services",
-                        });
-                }
-            }
-        }
-        </pre>
-    </div>
-    <div id="route-example-with-defaults-and-constraint" class="step code-step second-step" data-x="4000" data-z="-2000" data-rotate="90">
-        <h3>Route Example with Defaults and Constraint</h3>
-        <pre class="brush: csharp">
-        /*/DesktopModules/Example/Services/API/Ex/Find/123*/
-        mapper.MapRoute(
-            moduleFolderName: "Example/Services",
-            url: "Ex/{action}/{id}",
-            defaults: new {
-                controller = "Example",
-                action = "Index", 
-                id = string.Empty,
-            },
-            constraints: new { id = @"\d+", },
-            namespaces: new[] {
-                "Example.Dnn.Services",
-            });
-        </pre>
-    </div>
-    <div id="authentication" class="step" data-x="5000">
-        <h3>Authentication</h3>
-        <ul>
-            <li>
-                <strong>Basic</strong> access authentication
-                <ul>
-                    <li>Requires <abbr title="Secure HyperText Transport Protocol">HTTPS</abbr>/<abbr title="Secure Sockets Layer">SSL</abbr> for security</li>
-                    <li>Passes credentials on each request</li>
-                </ul>
-            </li>
-            <li>
-                <strong>Digest</strong> access authentication
-                <ul>
-                    <li>Uses MD5 for security</li>
-                    <li>Windows Phone 7 does not natively support digest</li>
-                </ul>
-            </li>
-            <li>
-                More to come
-            </li>
-            <li>
-                Anti-Forgery Token
-            </li>
-        </ul>
-    </div>
-    <div id="authorization" class="step" data-x="6000">
-        <h3>Authorization</h3>
-        <ul>
-            <li>
-                <code>DnnAuthorizeAttribute</code>
-                <ul>
-                    <li>Disallows anonymous access by default</li>
-                    <li>Can provide static list of role names</li>
-                    <li>Can limit to host access only</li>
-                </ul>
-            </li>
-            <li>
-                <code>AcceptVerbsAttribute</code>
-                <ul>
-                    <li>Provide bitwise combination of allowed verbs</li>
-                    <li>Can also use <code>HttpPost</code>, <code>HttpGet</code>, etc.</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div id="authorization-2" class="step second-step" data-x="6000" data-z="-1000">
-        <h3>Authorization</h3>
-        <ul>
-            <li>
-                <code>SupportedModulesAttribute</code>
-                <ul>
-                    <li>Comma-separated <strong>desktop module</strong> names</li>
-                    <li>
-                        Requires <code>ModuleId</code> and <code>TabId</code> in request
-                        <ul>
-                            <li>Can be header, query-string, form value or cookie</li>
-                            <li><code>beforeSend: sf.setModuleHeaders</code></li>
-                        </ul>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <code>DnnModuleAuthorizeAttribute</code>
-                <ul>
-                    <li>Define <strong>access level</strong> and/or <strong>permission key</strong></li>
-                    <li>Defaults to <strong>Host</strong> access level</li>
-                    <li>Requires <code>ModuleId</code> and <code>TabId</code> in request</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div id="dnn-context" class="step" data-x="7000">
-        <h3><abbr title="DotNetNuke">DNN</abbr> Context</h3>
-        <ul>
-            <li><code>UserInfo</code> (and authentication)</li>
-            <li><code>ActiveModule</code></li>
-            <li>
-                <code>PortalSettings</code>
-                <ul>
-                    <li><code>ActiveTab</code></li>
-                    <li><code>HomeDirectoryMapPath</code></li>
-                    <li><code>AdministratorId</code></li>
-                    <li><code>AdministratorRoleName</code></li>
-                    <li><code>CultureCode</code></li>
-                    <li><code>PortalAlias</code></li>
-                    <li>etc.</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <div id="usage-request-scripts" class="step code-step second-step" data-x="8000" data-z="-1000" data-rotate="90">
-        <h3>Usage &#x2013; Request Scripts</h3>
-        <pre class="brush: csharp">
-        using DotNetNuke.Framework;
-
-        public class MyModuleControl : ModuleView&lt;MyViewModel> {
-            protected override void OnInit(EventArgs e) {
-                base.OnInit(e);
-
-                var sf = ServicesFramework.Instance;
-                sf.RequestAjaxScriptSupport();
-                sf.RequestAjaxAntiForgerySupport();
-            }
-        }
-        </pre>
-    </div>
-    <div id="usage-ajax-request" class="step code-step second-step" data-x="8000" data-z="-2000" data-rotate="90">
-        <h3>Usage &#x2013; Ajax Request</h3>
-        <pre class="brush: js">
-        var sf = $.ServicesFramework(&lt;%:ModuleContext.ModuleId%>);
-        $.ajax({
-            type: 'POST',
-            url: sf.getServiceRoot('Example/S') + 'Example/Hello',
-            beforeSend: sf.setModuleHeaders,
-            data: sf.getAntiForgeryProperty({ /*...*/ })
-        }).done(function (data) { /*...*/ })
-          .fail(function (xhr, status) { /*...*/ });
-        </pre>
-    </div>
-    <div id="wrap-up" class="step" data-x="9000">
-        <h3>Wrap Up</h3>
-        <ul>
-            <li>Implementation</li>
-            <li>Benefits</li>
-            <li>Usage</li>
-        </ul>
-        <h3>More Info</h3>
-        <ul>
-            <li><a href="http://bit.ly/DNN-Services">http://bit.ly/DNN-Services</a></li>
-            <li><a href="http://bit.ly/DNN-Services-Pres">http://bit.ly/DNN-Services-Pres</a></li>
-        </ul>
-    </div>
-    <div id="sponsors" class="step" data-x="11000" data-rotate="180">
-        <h3>Thanks to all our Generous Sponsors!</h3>
-        <a id="dnn-logo" href="http://www.dotnetnuke.com/"><img src="img/DotNetNuke.png" alt="DotNetNuke" /></a>
-        <a href="http://www.PowerDNN.com/"><img src="img/PowerDnn.png" alt="PowerDNN" /></a>
-        <a href="http://uncc.edu/"><img src="img/UNC%20Charlotte.png" alt="University of North Carolina at Charlotte" /></a>
-        <a href="http://www.engagesoftware.com/"><img src="img/Engage.png" alt="Engage Software" /></a>
-        <a href="http://www.aspose.com/"><img src="img/Aspose.png" alt="Aspose" /></a>
-        <a href="http://www.packflash.com/"><img src="img/PackFlash.png" alt="PackFlash" /></a>
-        <a href="http://www.arrownuke.com/"><img src="img/Arrow%20Consulting%20%26%20Design.png" alt="Arrow Consulting &amp; Design" /></a>
-        <a href="http://www.appliedi.net/"><img src="img/Applied%20Innovations.png" alt="Applied Innovations" /></a>
-        <a href="http://www.cfwebmasters.com/"><img src="img/CF%20Webmasters.png" alt="Cape Fear Webmasters" /></a>
-        <a href="http://enlivenstudio.com/"><img src="img/enliven.png" alt="Enliven Studio" /></a>
-        <a href="http://coolcoyotes.com/"><img src="img/Cool%20Coyotes.png" alt="Cool Coyotes" /></a>
-        <a href="http://www.iowacomputergurus.com/"><img src="img/Iowa%20Computer%20Gurus.png" alt="Iowa Computer Gurus" /></a>
-        <a href="http://www.roberthalftechnology.com/"><img src="img/Robert%20Half%20Technology.png" alt="Robert Half Technology" /></a>
-        <a href="http://dnndev.com/"><img src="img/DNN%20Dev.jpg" alt="DNNDev" /></a>
-        <a href="https://www.technicalcommunity.com/Pages/default.aspx"><img src="img/Microsoft%20UGSS.png" alt="Microsoft User Group Support Services" /></a>
-        <a href="http://www.infragistics.com/"><img src="img/Infragistics.png" alt="Infragistics" /></a>
-        <a href="http://logicaladvantage.com/"><img src="img/Logical%20Advantage.png" alt="Logical Advantage" /></a>
-        <a href="http://www.spiffywebteam.com/"><img src="img/Spiffy.png" alt="Spiffy Web Team" /></a>
-        <a href="http://www.pointclick.net/"><img src="img/PointClick%20Technologies.png" alt="PointClick Technologies" /></a>
     </div>
 </div>
 
