Remove impress.js for authoring content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <script src="js/LAB.min.js"></script>
 <script>
 $LAB
-.script("js/impress.js")
+//.script("js/impress.js")
 .script("js/shCore.js").wait()
 .script("js/shBrushCSharp.js")
 .script("js/shBrushJScript.js")
