Add 'Resources' to Review

--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@
             <li>Templating</li>
             <li>Dependency Tracking</li>
         </ol>
+        <h3>Resources</h3>
+        <ul>
+            <li><a href="http://learn.knockoutjs.com/">http://learn.knockoutjs.com/</a></li>
+            <li><a href="http://knockoutjs.com/examples/">http://knockoutjs.com/examples/</a></li>
+            <li><a href="http://knockoutjs.com/documentation/introduction.html">http://knockoutjs.com/ - Documentation</a></li>
+        </ul>
     </div>
 </div>
 
